--- a/html/home.html
+++ b/html/home.html
@@ -303,7 +303,7 @@
                     Integrate our reliable and fast API into your application with just a few lines of code. Built for developers.
                 </p>
                 <div class="hero-buttons">
-                    <a href="/docs" class="btn btn-outline">Read The Docs</a>
+                    <a href="/docs" class="btn btn-primary">Read The Docs</a>
                 </div>
             </div>
         </section>
